--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
 
 :root{
-    --orange:#ff7800;
-    --black:#130f40;
+    --orange:#b4f066;
+    --black:#c837f5;
     --light-color:#666;
     --box-shadow:0 .5rem 1.5rem rgba(0,0,0,.1);
     --border:.2rem solid rgba(0,0,0,.1);
     --outline:.1rem solid rgba(0,0,0,.1);
-    --outline-hover:.2rem solid var(--black);
+    --outline-hover:.2rem solid var(--black); 
+    
 }
 
 *{
@@ -24,12 +25,13 @@ html{
     font-size: 62.5%;
     overflow-x: hidden;
     scroll-behavior: smooth;
-    scroll-padding-top: 7rem;
+    scroll-padding-top: 7rem; 
+    
 }
-
+/*patterns*/
 body{
     background-color: #060606;
-background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%2362ee6c' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg width='180' height='180' viewBox='0 0 180 180' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M81.28 88H68.413l19.298 19.298L81.28 88zm2.107 0h13.226L90 107.838 83.387 88zm15.334 0h12.866l-19.298 19.298L98.72 88zm-32.927-2.207L73.586 78h32.827l.5.5 7.294 7.293L115.414 87l-24.707 24.707-.707.707L64.586 87l1.207-1.207zm2.62.207L74 80.414 79.586 86H68.414zm16 0L90 80.414 95.586 86H84.414zm16 0L106 80.414 111.586 86h-11.172zm-8-6h11.173L98 85.586 92.414 80zM82 85.586L87.586 80H76.414L82 85.586zM17.414 0L.707 16.707 0 17.414V0h17.414zM4.28 0L0 12.838V0h4.28zm10.306 0L2.288 12.298 6.388 0h8.198zM180 17.414L162.586 0H180v17.414zM165.414 0l12.298 12.298L173.612 0h-8.198zM180 12.838L175.72 0H180v12.838zM0 163h16.413l.5.5 7.294 7.293L25.414 172l-8 8H0v-17zm0 10h6.613l-2.334 7H0v-7zm14.586 7l7-7H8.72l-2.333 7h8.2zM0 165.414L5.586 171H0v-5.586zM10.414 171L16 165.414 21.586 171H10.414zm-8-6h11.172L8 170.586 2.414 165zM180 163h-16.413l-7.794 7.793-1.207 1.207 8 8H180v-17zm-14.586 17l-7-7h12.865l2.333 7h-8.2zM180 173h-6.613l2.334 7H180v-7zm-21.586-2l5.586-5.586 5.586 5.586h-11.172zM180 165.414L174.414 171H180v-5.586zm-8 5.172l5.586-5.586h-11.172l5.586 5.586zM152.933 25.653l1.414 1.414-33.94 33.942-1.416-1.416 33.943-33.94zm1.414 127.28l-1.414 1.414-33.942-33.94 1.416-1.416 33.94 33.943zm-127.28 1.414l-1.414-1.414 33.94-33.942 1.416 1.416-33.943 33.94zm-1.414-127.28l1.414-1.414 33.942 33.94-1.416 1.416-33.94-33.943zM0 85c2.21 0 4 1.79 4 4s-1.79 4-4 4v-8zm180 0c-2.21 0-4 1.79-4 4s1.79 4 4 4v-8zM94 0c0 2.21-1.79 4-4 4s-4-1.79-4-4h8zm0 180c0-2.21-1.79-4-4-4s-4 1.79-4 4h8z' fill='%2362ee6c' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 section{
@@ -41,12 +43,13 @@ section{
     padding:2rem 0;
     padding-bottom: 3rem;
     font-size: 3.5rem;
-    color:var(--black);
+    color:var(--black); 
+    
 }
 
 .heading span{
     background: var(--orange);
-    color:#fff;
+    color:#c837f5;
     display: inline-block;
     padding:.5rem 3rem;
     clip-path: polygon(100% 0, 93% 50%, 100% 99%, 0% 100%, 7% 50%, 0% 0%);
@@ -66,7 +69,7 @@ section{
 
 .btn:hover{
     background: var(--orange);
-    color:#fff;
+    color:rgb(0, 0, 0);
 }
 
 .header{
@@ -77,7 +80,9 @@ section{
     align-items: center;
     justify-content: space-between;
     padding:2rem 9%;
-    background:#fff;
+    background: #a80077;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #66ff00, #a80077);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #66ff00, #a80077); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     box-shadow: var(--box-shadow);
 }
 
@@ -87,14 +92,13 @@ section{
     color:var(--black);
 }
 
-.header .logo i{
-    color:var(--orange);
+.logo{
+    width: 55px;
 }
-
 .header .navbar a{
     font-size: 1.7rem;
     margin:0 1rem;
-    color:var(--black);
+    color: rgb(253, 253, 253); 
 }
 
 .header .navbar a:hover{
@@ -106,7 +110,7 @@ section{
     width: 4.5rem;
     line-height: 4.5rem;
     border-radius: .5rem;
-    background: #eee;
+    background: rgb(0, 0, 0);
     color:var(--black);
     font-size: 2rem;
     margin-left: .3rem;
@@ -116,11 +120,12 @@ section{
 
 .header .icons div:hover{
     background: var(--orange);
-    color:#fff;
+    color:#c837f5;
 }
 
 #menu-btn{
-    display: none;
+    display: none; 
+    
 }
 
 .header .search-form{
@@ -128,7 +133,7 @@ section{
     top:110%; right:-110%;
     width: 50rem;
     height:5rem;
-    background: #fff;
+    background: #b4f066;
     border-radius: .5rem;
     overflow: hidden;
     display: flex;
@@ -138,7 +143,8 @@ section{
 
 .header .search-form.active{
     right:2rem;
-    transition: .4s linear;
+    transition: .4s linear; 
+    
 }
 
 .header .search-form input{
@@ -148,14 +154,16 @@ section{
     text-transform: none;
     font-size: 1.6rem;
     color:var(--black);
-    padding:0 1.5rem;
+    padding:0 1.5rem; 
+    
 }
 
 .header .search-form label{
     font-size: 2.2rem;
     padding-right: 1.5rem;
     color:var(--black);
-    cursor: pointer;
+    cursor: pointer; 
+    
 }
 
 .header .search-form label:hover{
@@ -278,7 +286,7 @@ section{
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url(../image/banner-bg.webp) no-repeat;
+    
     background-position: center;
     background-size: cover;
     padding-top: 17rem;
@@ -314,7 +322,6 @@ section{
 
 .features .box-container .box{
     padding:3rem 2rem;
-    background: #fff;
     outline: var(--outline);
     outline-offset: -1rem;
     text-align: center;
@@ -344,7 +351,8 @@ section{
     padding:1rem 0;
 }
 
-.products .product-slider{
+.products .product-slider{ 
+    
     padding:1rem;
 }
 
@@ -353,7 +361,7 @@ section{
 }
 
 .products .product-slider .box{
-    background: #fff;
+    
     border-radius: .5rem;
     text-align: center;
     padding:3rem 2rem;
@@ -433,7 +441,7 @@ section{
 }
 
 .review .review-slider .box{
-    background: #fff;
+    background: rgb(255, 255, 255);
     border-radius: .5rem;
     text-align: center;
     padding:3rem 2rem;
@@ -482,7 +490,10 @@ section{
     overflow: hidden;
     border-radius: .5rem;
     box-shadow: var(--box-shadow);
-    background:#fff;
+    background: #a80077;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #66ff00, #a80077);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #66ff00, #a80077); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
 }
 
 .blogs .box-container .box img{
@@ -532,9 +543,7 @@ section{
     padding:.5rem 0;
 }
 
-.footer{
-    background: #fff;
-}
+
 
 .footer .box-container{
     display: grid;
@@ -556,23 +565,25 @@ section{
     display: block;
     font-size: 1.5rem;
     color:var(--light-color);
-    padding:1rem 0;
+    padding:1rem 0; 
+    color: #fff;
 }
 
 .footer .box-container .box .links i{
     color:var(--orange);
-    padding-right: .5rem;
+    padding-right: .5rem; 
+    
 }
 
 .footer .box-container .box .links:hover i{
-    padding-right: 2rem;
+    padding-right: 2rem; 
 }
 
 
 .footer .box-container .box p{
     line-height: 1.8;
     font-size: 1.5rem;
-    color:var(--light-color);
+    color: #fff;
     padding:1rem 0;
 }
 
@@ -669,7 +680,7 @@ section{
         width:30rem;
         box-shadow: var(--box-shadow);
         border-radius: .5rem;
-        background: #fff;
+        background:  #c837f5;;
     }
 
     .header .navbar.active{
